
2016-11-11  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed for new spacing.

2016-11-09  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added cross reference tests.

2016-11-07  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added 88 values to printed symbol listing.

2016-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh, testsuite.src/listing.at: adjustment for new maximum
	  of 14 digits in version string
	* testsuite.src/listing.at: capture original listing, instead of unified one

2016-11-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh: moved from testsuite.src/listings-sed.sh
	* listings-sed.sh: adjustment for exotic shells
	* atlocal.in, atlocal_win: adjusted listings-sed.sh path in UNIFY_LISTING
	* Makefile.am: added listings-sed.sh to EXTRA_DIST

2016-11-01  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed preprocessed compile for new line
	  number processing and added an error preprocessed test case.

2016-10-31  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added header/trailer to file not found 
	  test case.

2016-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85/Makefile.am, cobol85/report.pl: added support for make with
	  multiple jobs (only done when building the test directories)

2016-10-29  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings-sed.sh: Fixed for generic 9 character version.
	* testsuite.src/listings.at: Fixed for generic 9 character version.

2016-10-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in: pass COB_HAS_UTC_OFFSET, set PATHSEP and COB_HAS_CURSES
	  for MinGW
	* testsuite.src/listings-sed.sh: fix for patchlevel up to 999  
	* testsuite.src/configuration.at, testsuite.src/used_binaries.at:
	  used `cobc -q` (instead of sed script) to simplify "unrecognized option"
	* testsuite.src/run_misc.at: define NULL if needed