@@ -74,3 +74,11 @@ fi
 export COB_HAS_CURSES
 export COB_HAS_UTC_OFFSET
 export LC_ALL=C
+
+
+# For rare cases where cobc/libcob may need to know if they're running in test mode:
+if test "$0" = "./testsuite"; then
+	export COB_IS_RUNNING_IN_TESTMODE=1
+else
+	unset COB_IS_RUNNING_IN_TESTMODE
+fi
